--- a/src/styled/secondContainer/secondContainer.module.css
+++ b/src/styled/secondContainer/secondContainer.module.css
@@ -40,7 +40,7 @@
   margin-top: 8%;
   margin-left: 12.5%;
   width: 50%;
-  height: 16;
+  height: 16%;
   font-family: Gilroy;
   font-size: 40px;
   font-weight: 800;
@@ -52,9 +52,11 @@
 @media (max-width: 768px) {
   .whatAreYourChallenges {
     margin-top: 6.3%;
-    width: 75%;
+    margin-left: 0%;
+    width: auto;
     height: 11%;
     font-size: 30px;
+    text-align: center;
   }
 }
 
