--- a/src/styled/thirdContainer/thirdContainer.module.css
+++ b/src/styled/thirdContainer/thirdContainer.module.css
@@ -11,10 +11,7 @@
   font-family: Gilroy;
   font-size: 65px;
   font-weight: 800;
-  font-stretch: normal;
-  font-style: normal;
   line-height: 1.08;
-  letter-spacing: normal;
   text-align: center;
   color: #306bdd;
 }
@@ -27,6 +24,14 @@
   margin-left: 7.5%;
   margin-right: 7.5%;
   margin-top: 10%;
+}
+
+.numberDivRow {
+  display: flex;
+}
+
+.rowForMobile {
+  display: inline;
 }
 
 .numberContainer {
@@ -59,6 +64,7 @@
   font-weight: 800;
   line-height: 0.53;
   text-align: left;
+  margin: 15px;
 }
 
 .dottedDivider {
@@ -100,4 +106,82 @@
   margin-left: 7.5%;
   margin-right: 7.5%;
   margin-top: 10%;
+}
+
+.imageObjectFit {
+  object-fit: contain;
+}
+
+@media (max-width: 768px) {
+  .container {
+    background-color: #f0f0f0;
+    height: auto;
+  }
+
+  .title {
+    height: auto;
+    padding-top: 1%;
+    font-family: Gilroy;
+    font-size: 40px;
+    font-weight: 800;
+    line-height: 1.08;
+    text-align: center;
+    color: #306bdd;
+  }
+
+  .numberDivRow {
+    display: inline;
+    position: relative;
+    z-index: 2;
+  }
+
+  .rowForMobile {
+    display: flex;
+  }
+
+  .dottedDivider {
+    border-left: 0px dotted #707070;
+    border-top: 1px dotted #707070;
+    height: 0px;
+    width: 77px;
+    margin-left: -8%;
+    margin-top: 17px;
+    position: relative;
+    z-index: 0;
+  }
+
+  .numberTitle {
+    font-size: 15px;
+    padding-top: 15%;
+    margin: 0;
+  }
+
+  .imageContainer {
+    padding-left: 7.5%;
+    margin-left: 0%;
+    margin-right: 0%;
+    margin-top: 1.1%;
+    width: 100vw;
+  }
+
+  .digitizeYourExpensePolicy {
+    margin-top: 5%;
+    font-size: 17px;
+  }
+
+  .setYourSpendingPolicies {
+    width: 60%;
+    margin-top: 2%;
+    margin-left: 2%;
+    font-size: 12px;
+  }
+
+  .numberContainer {
+    height: 34px;
+    width: 34px;
+  }
+
+  .numberText {
+    margin-top: 0px;
+  }
 }
